syntax = "proto3";

package grpc.user.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "custom_enums/v1/custom_enums.proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string fist_name = 2;
  string last_name = 3;
  string cca3 = 4;
}

message CreateUserResponse {
  User user = 1;
  CreateUserResponseDescription description = 2;
  custom_enums.v1.OperationStatus status = 3;
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  User user = 1;
  optional string description = 2;
  custom_enums.v1.OperationStatus status = 3;
}

message GetAllUsersRequest {
  int64 page = 1;
  int64 page_size = 2;
  optional string search = 3;
  optional bool is_blocked = 4;
  optional bool is_deleted = 5;
  optional bool is_verified = 6;
}

message GetAllUsersResponse {
  repeated User rows = 1;
  int64 total_count = 2;
  int64 current_page = 3;
  int64 total_pages = 4;
  optional string description = 5;
  custom_enums.v1.OperationStatus status = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string cca3 = 6;
  optional bool is_deleted = 7;
  optional bool is_blocked = 8;
  optional bool is_verified = 9;
}

message UpdateUserResponse {
  User user = 1;
  UpdateUserResponseDescription description = 2;
  custom_enums.v1.OperationStatus status = 3;
}

message User {
  int64 id = 1;
  string email = 2;
  string fist_name = 3;
  string last_name = 4;
  string cca3 = 5;
  google.protobuf.Timestamp is_blocked = 6;
  google.protobuf.Timestamp is_deleted = 7;
  google.protobuf.Timestamp is_verified = 8;
  google.protobuf.Timestamp created_at = 9;
}

message CreateUserResponseDescription {
  repeated string email = 1;
  repeated string fist_name = 2;
  repeated string last_name = 3;
  repeated string cca3 = 4;
}

message UpdateUserResponseDescription {
  repeated string email = 1;
  repeated string fist_name = 2;
  repeated string last_name = 3;
  repeated string cca3 = 4;
}